Add header nav and header banner and relavant style

--- a/index.html
+++ b/index.html
@@ -10,10 +10,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-
+    <header class="header-setion">
+        <nav>
+            <ul class="nav-list">
+                <li><h4 class="color-primary logo-class inter-font ">LOGO</h4></li>
+                <li><a href="#"><button class="header-btn">Sign UP</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h2>Cool Dark UI Template for Webflow Agencies!</h2>
+                <button class="banner-button">Stay Focused</button>
+            </div>
+        </div>
     </header>
-    <main></main>
+    <main>
+        <section class="action">
+            <div class="action-left">
+                <h3 class="action-title"></h3>
+                <p class="action-description"></p>
+            </div>
+            <div class="action-right">
+
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
