Add Action section and styles

--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
         </div>
     </header>
     <main>
-        <section class="action">
+        <section class="action raleway-font">
             <div class="action-left">
-                <h3 class="action-title"></h3>
-                <p class="action-description"></p>
+                <h3 class="action-title">See It in Action</h3>
+                <p class="action-description">
+                    Explore the live preview and imagine your brand in this bold new look.
+                </p>
+                <a href=""><button class="action-left-btn">Launch Live Preview</button></a>
             </div>
             <div class="action-right">
-
+                <img src="Assets/wc-mini.png" alt="" class="ation-image-right">
             </div>
         </section>
     </main>
