Add Productive Section and its style

--- a/index.html
+++ b/index.html
@@ -37,6 +37,28 @@
                 <img src="Assets/wc-mini.png" alt="" class="ation-image-right">
             </div>
         </section>
+
+        <section class="productive-section">
+            <div class="container">
+                <h2 class="productive-section-title raleway-font">Joined Thousands of Productive Users</h2>
+        
+                <div class="user-stats inter-font">
+                    <div class="stat-box">
+                        <h3 class="stats-data color-primary ">50K</h3>
+                        <p class="stat-subtitle">Active Users</p>
+                    </div>
+                    <div class="stat-box">
+                        <h3 class="stats-data color-primary ">2M+</h3>
+                        <p class="stat-subtitle">Teams Collaborating</p>
+                    </div>
+                    <div class="stat-box">
+                        <h3 class="stats-data color-primary ">95%</h3>
+                        <p class="stat-subtitle">Satisfaction Rate</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer></footer>
 </body>
