--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul class="nav-list">
                 <li><h4 class="color-primary logo-class inter-font ">LOGO</h4></li>
-                <li><a href="#"><button class="header-btn">Sign UP</button></a></li>
+                <li><a href="#"><button class="header-btn">Sign Up</button></a></li>
             </ul>
         </nav>
         <div class="banner">
