Add Users FeedBack Section and styled it

--- a/index.html
+++ b/index.html
@@ -59,6 +59,80 @@
             </div>
         </section>
 
+        <section class="users-feedback">
+            <div class="feedback-title raleway-font">
+                <h2>What our users say</h2>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                    </div>
+                    <div class="title-and-description">
+                        <h4 class="card-title ag-heading ">Loved by Designers</h4>
+                        <p class="card-descrption body-base ">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    </div>
+                    <div class="card-reviwer-info">
+                        <div class="reviewer-image">
+                            <img src="Assets/avatar.png" alt="">
+                        </div>
+                        <div class="reviewer-info">
+                            <p class="reviewer-name body-strong">REVIEWER NAME</p>
+                            <p class="reviewer-date">Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                    </div>
+                    <div class="title-and-description">
+                        <h4 class="card-title ag-heading ">Loved by Designers</h4>
+                        <p class="card-descrption body-base ">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    </div>
+                    <div class="card-reviwer-info">
+                        <div class="reviewer-image">
+                            <img src="Assets/avatar.png" alt="">
+                        </div>
+                        <div class="reviewer-info">
+                            <p class="reviewer-name body-strong">REVIEWER NAME</p>
+                            <p class="reviewer-date">Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                        <img src="Assets/icon-star.png" alt="" class="icon">
+                    </div>
+                    <div class="title-and-description">
+                        <h4 class="card-title ag-heading ">Loved by Designers</h4>
+                        <p class="card-descrption body-base ">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    </div>
+                    <div class="card-reviwer-info">
+                        <div class="reviewer-image">
+                            <img src="Assets/avatar.png" alt="">
+                        </div>
+                        <div class="reviewer-info">
+                            <p class="reviewer-name body-strong">REVIEWER NAME</p>
+                            <p class="reviewer-date">Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer></footer>
 </body>
