Add optional section and its style

--- a/index.html
+++ b/index.html
@@ -133,6 +133,23 @@
             </div>
         </section>
 
+        <section class="optional">
+            <div class="heading raleway-font">
+                <h2 class="heading-class">Ready to focus better</h2>
+            </div>
+            <div class="paragraph">
+                <p class="paragraph-class body-base">
+                    This template instantly leveled up our presence.” – Studio Vertex
+                </p>
+            </div>
+            <div class="button">
+                <a href="#"><button class="button-class">Get Started Free</button></a>
+            </div>
+            <div class="image">
+                <img src="Assets/wc-mini.png" alt="" class="image-class">
+            </div>
+        </section>
+
     </main>
     <footer></footer>
 </body>
