--- a/index.html
+++ b/index.html
@@ -168,6 +168,22 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="section-footer">
+        <div class="common">
+            <div class="footer-row1">
+            <h1 class="f-logo color-primary inter-font">LOGO</h1>
+            <p class="f-description ag-paragraph ">Ready to elevate your online presence? 
+                Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+        </div>
+        <div class="footer-row2">
+         <ul class="list">
+          <li class="ag-paragraph"><a href="#">Home</a></li>
+          <li class="ag-paragraph"><a href="#">About</a></li>
+          <li class="ag-paragraph"><a href="#">How it Works</a></li>
+          <li class="ag-paragraph"><a href="#">Services</a></li>
+          </ul>
+        </div>
+        </div>
+    </footer>
 </body>
 </html>
