--- a/index.html
+++ b/index.html
@@ -151,21 +151,23 @@
         </section>
 
         <section class="get-in-touch">
-            <div class="touch-column-1">
+           <div class="common-div">
+             <div class="touch-column-1">
                 <h1 class="touch-header raleway-font ">Let’s Get in Touch</h1>
             </div>
-            <div class="touch-column ">
+            <div class="touch-column">
                 <form action="">
-                    <label class="inter-font" for="email">Email</label>
+                    <label class=" email-class inter-font" for="email">Email</label>
                     <input type="email" name="" id="" placeholder="example@email.com" class="inter-font">
                     <label class="inter-font" for="text">Name</label>
                     <input type="text" name="" id="" placeholder="full name" class="inter-font">
                     <label class="inter-font" for="message">Message</label>
-                    <textarea name="" id="" cols="30" rows="20" placeholder="write your message...." class="inter-font"></textarea>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="write your message...." class="inter-font"></textarea>
                     <a href=""><button class="touch-btn raleway-font">Get in Touch</button></a>
                     
                 </form>
             </div>
+           </div>
         </section>
     </main>
     <footer class="section-footer">
