--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
         </div>
         <div class="footer-row2">
          <ul class="list">
-          <li class="ag-paragraph"><a href="#">Home</a></li>
-          <li class="ag-paragraph"><a href="#">About</a></li>
-          <li class="ag-paragraph"><a href="#">How it Works</a></li>
-          <li class="ag-paragraph"><a href="#">Services</a></li>
+          <li class="ag-paragraph"><a href="https://www.google.com/">Home</a></li>
+          <li class="ag-paragraph"><a href="https://www.facebook.com/">About</a></li>
+          <li class="ag-paragraph"><a href="https://www.programming-hero.com/">How it Works</a></li>
+          <li class="ag-paragraph"><a href="https://web.programming-hero.com/home">Services</a></li>
           </ul>
         </div>
         </div>
