Fix banner content style and image issues and text row issues

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <a href="#"><button class="button-class">Get Started Free</button></a>
             </div>
             <div class="image">
-                <img src="Assets/wc-mini.png" alt="" class="image-class">
+                <img src="Assets/wc-big.png" alt="" class="image-class">
             </div>
         </section>
 
